--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 }
 
 html {
+
 	scroll-behavior: smooth;
 	font-size: 62.5%;
 	scroll-padding-top: 3rem;
@@ -52,8 +53,11 @@ header {
 }
 
 main {
-	z-index: -1;
+
+	z-index: -10;
+	
 	.about-us {
+		z-index: 1;
 		.box {
 			width: 100%;
 		}
@@ -73,6 +77,7 @@ main {
 			flex-direction: column;
 			padding: 1rem;
 			color: black;
+			text-align: center;
 
 			h3 {
 				text-align: center;
@@ -87,8 +92,10 @@ main {
 	}
 
 	.gap-bg {
+		z-index: 1;
 		background-image: url(../img/IMG_8467.jpeg);
 		padding: 23rem 0;
+		margin: 0;
 		background-attachment: scroll;
 		background-position: 50% 90%;
 		background-size: cover;
@@ -99,6 +106,8 @@ main {
 		align-items: center;
 		justify-content: center;
 		margin: 0 auto;
+		z-index: 1;
+
 
 		.review__boxes {
 			margin: 0;
@@ -122,7 +131,7 @@ main {
 		.wrapper {
 			max-width: 1400px;
 			overflow: hidden;
-			padding: 15rem 0;
+			padding: 6rem 0;
 			margin: 0;
 		}
 
@@ -181,6 +190,7 @@ main {
 	}
 
 	.opinion {
+		z-index: 1;
 		background-color: #333;
 		margin: 3rem 0;
 
